# Multi-Dictionary-Database

./: README.md  mockfile  note.md
lib/: create.h  meta_img.h  read.h  tmp.h
metaImage_4/metaImage/: CMakeLists.txt  mockfile
metaImage_4/metaImage/lib/: create.h  meta.h  meta_img.h  read.h  tmp.h
metaImage_4/metaImage/src/: create.cpp  main.cpp  read.cpp
src/: create.cpp  main.cpp  read.cpp  tmp.cpp
